2019-10-15  John D. Ramsdell  <ramsdell@mitre.org>

	* agum.cabal (Version): Released as version 2.8

	* src/Algebra/AbelianGroup/Main.hs (AnsErr): Updated code to
	support the MonadFail proposal as implemented in base-4.13.0.0.

2018-01-06  John D. Ramsdell  <ramsdell@mitre.org>

	* src/Algebra/AbelianGroup/Main.hs (readM): Adapted the code to
	work when Monad no longer has a fail method.

2015-04-27  John D. Ramsdell  <ramsdell@mitre.org>

	* src/Algebra/AbelianGroup/Main.hs (AnsErr): Added Functor and
	Applicative instance so that the code compiles in GHC 7.10.
	Thanks go to Douglas McClean.

	* agum.cabal (Version): Released as version 2.6

2013-02-21  John D. Ramsdell  <ramsdell@mitre.org>

	* agum.cabal (Location): Added repository location.

	* agum.cabal (Version): Released as version 2.5

2012-02-29  John D. Ramsdell  <ramsdell@mitre.org>

	* agum.cabal (Version): Released as version 2.4.  Also,
	constrained the containers package to be 0.3 or greater.

	* src/Algebra/AbelianGroup/UnificationMatching.hs:  Replaced
	occurrences of Data.Map.foldWithKey by Data.Map.foldrWithKey as
	the former has been deprecated.

2010-06-21  John D. Ramsdell  <ramsdell@mitre.org>

	* agum.cabal (Version): Released as version 2.3.

	* agum.cabal (Build-Depends): changes dependency to
	base >= 3 && <5, containers

2009-09-17  John D. Ramsdell  <ramsdell@mitre.org>

	* agum.cabal (Version): Released as version 2.2.

2009-09-14  John D. Ramsdell  <ramsdell@.mitre.org>

	* src/Algebra/AbelianGroup/IntLinEq.hs: Integer solutions to
	linear equation solver was placed in its own module.

2009-09-13  John D. Ramsdell  <ramsdell@mitre.org>

	* src/Algebra/AbelianGroup/UnificationMatching.hs (unify): Changed
	the result to be a substitution since unification always succeeds.

2009-09-05  John D. Ramsdell  <ramsdell@mitre.org>

	* src/Algebra/AbelianGroup/UnificationMatching.hs:  Added
	reference to Andrew Kennedy's Ph.D. thesis as it contains a proof