@@ -1,3 +1,7 @@
+2021-04-14  John D. Ramsdell  <ramsdell@mitre.org>
+
+	* Makefile: Greatly simplified the make file.
+
 2019-10-15  John D. Ramsdell  <ramsdell@mitre.org>
 
 	* agum.cabal (Version): Released as version 2.8
